Fixed recursion on calculator

--- a/amm_prediction_calculator.ipynb
+++ b/amm_prediction_calculator.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## AMM Predicted Emission Calculator v1.1, 7/25/20\n",
+    "## AMM Predicted Emission Calculator v1.1, 7/26/20\n",
     "\n",
     "### Introduction\n",
     "This program estimates future US AMM emissions from mines closed in a given set of years. The methodology is adapted from Kholod et al., 2020 (full citation in RefWorks), and uses gross coal production rather than individual mine data. To use, click the button that says \"Run\" above (it might take more than one click to start) and follow the prompts. I imagine there are still a few bugs I haven't caught, so if you get some sort of error message just run it again!\n",
@@ -55,7 +55,6 @@
     "— DataFrame with annual emissions in mmcf and MtCO2e, as well as cumulative MtCO2e\n",
     "\n",
     "### Next steps\n",
-    "— Debug\n",
     "\n",
     "— Quantify/include uncertainty\n",
     "\n",
@@ -66,8 +65,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -77,8 +78,7 @@
       "    (Input a number, or hit return for default.) \n",
       "Default = 3 years.\n",
       "Which coal production forecast?\n",
-      "    Input 'info' to see options, or hit return for default. \n",
-      "Default = EIA.\n",
+      "    Input 'info' to see options, or hit return for default. eia\n",
       "What abandonment rate?\n",
       "    (Input a percentage, or hit return for the default value of 5.) \n",
       "Default = 5%.\n",
@@ -86,7 +86,7 @@
       "    Input 'info' to see options, or hit return for default. \n",
       "Default = IPCC.\n",
       "What abandoned mine flood rate would you like to use? \n",
-      "    (Enter as a percentage, or hit return for the default default value of 50.)\n",
+      "    (Enter as a percentage, or hit return for the default value of 50.)\n",
       "Default = 50%.\n"
      ]
     },
@@ -163,6 +163,10 @@
     "## Some initial parameters.\n",
     "years = [2020, 2021, 2022, 2023, 2024, 2025, 2026, 2027, 2028, 2029, 2030, 2031, 2032, 2033, 2034, 2035, 2036, \n",
     "         2037, 2038, 2039, 2040, 2041, 2042, 2043, 2044, 2045, 2046, 2047, 2048, 2049, 2050]\n",
+    "eia_estimate = [442.861272, 428.98104, 435.525624, 415.021608, 411.54426, 394.532784, 409.4955, 408.471768,\n",
+    "            405.04014, 401.961816, 401.42394, 399.451068, 398.7099, 400.991436, 398.13984, 394.628148,\n",
+    "            392.405976, 391.904352, 388.400364, 386.64108, 385.63866, 384.313716, 384.122988,\n",
+    "            383.962608, 383.930532, 382.910616, 385.213068, 384.607296, 384.273828, 383.38416, 384.307416]\n",
     "b = 2.017\n",
     "Di_dry = 0.302\n",
     "Di_flooded = 0.672\n",
@@ -182,7 +186,7 @@
     "        return production_years\n",
     "    else:\n",
     "        print(\"Not a valid input.\")\n",
-    "        ask1()\n",
+    "        return ask1()\n",
     "\n",
     "def ask2():\n",
     "    coal_production = []\n",
@@ -190,23 +194,17 @@
     "    Input 'info' to see options, or hit return for default. \"\"\")\n",
     "    if q2.lower() == \"info\":\n",
     "        print(\"\"\"'EIA': Energy Information Association's Annual Energy Outlook 2020 Coal Production Forecasts.\"\"\")\n",
-    "        ask2()\n",
+    "        return ask2()\n",
     "    elif q2.lower() == \"eia\":\n",
-    "        coal_production = [442.861272, 428.98104, 435.525624, 415.021608, 411.54426, 394.532784, 409.4955, 408.471768,\n",
-    "                       405.04014, 401.961816, 401.42394, 399.451068, 398.7099, 400.991436, 398.13984, 394.628148,\n",
-    "                       392.405976, 391.904352, 388.400364, 386.64108, 385.63866, 384.313716, 384.122988,\n",
-    "                       383.962608, 383.930532, 382.910616, 385.213068, 384.607296, 384.273828, 383.38416, 384.307416]\n",
+    "        coal_production = eia_estimate\n",
     "        return coal_production\n",
     "    elif q2 == \"\":\n",
-    "        coal_production = [442.861272, 428.98104, 435.525624, 415.021608, 411.54426, 394.532784, 409.4955, 408.471768,\n",
-    "                       405.04014, 401.961816, 401.42394, 399.451068, 398.7099, 400.991436, 398.13984, 394.628148,\n",
-    "                       392.405976, 391.904352, 388.400364, 386.64108, 385.63866, 384.313716, 384.122988,\n",
-    "                       383.962608, 383.930532, 382.910616, 385.213068, 384.607296, 384.273828, 383.38416, 384.307416]\n",
+    "        coal_production = eia_estimate\n",
     "        print(\"Default = EIA.\")\n",
     "        return coal_production\n",
     "    else:\n",
     "        print(\"Not a valid input.\")\n",
-    "        ask2()\n",
+    "        return ask2()\n",
     "\n",
     "def ask3():\n",
     "    abandonment_rate = 0.0\n",
@@ -218,16 +216,15 @@
     "        return abandonment_rate\n",
     "    else:\n",
     "        try:\n",
-    "            if float(q3) >= 0:\n",
-    "                if float(q3) <= 100:\n",
+    "            if float(q3) >= 0 and float(q3) <= 100:\n",
     "                    abandonment_rate = float(q3)/100\n",
     "                    return abandonment_rate\n",
     "            else:\n",
     "                print(\"Not a valid input.\")\n",
-    "                ask3()\n",
+    "                return ask3()\n",
     "        except ValueError:\n",
     "            print(\"Not a valid input.\")\n",
-    "            ask3()\n",
+    "            return ask3()\n",
     "    \n",
     "def ask4():\n",
     "    ef_leq200 = 0\n",
@@ -241,7 +238,7 @@
     "        'M2CM': standard Languir isotherms, adjusted using a 1.7 emission factor coefficient\n",
     "        (Kholod et al., 2020).\n",
     "        'Manual': manually input emission factors for <200m, 200-400m, and >400m.\"\"\")\n",
-    "        ask4()\n",
+    "        return ask4()\n",
     "    elif q4.lower() == \"ipcc\":\n",
     "        ef_leq200 = 10\n",
     "        ef_200to400 = 18\n",
@@ -261,33 +258,35 @@
     "            return (ef_leq200, ef_200to400, ef_geq400)\n",
     "        except ValueError:\n",
     "            print(\"Not a valid input.\")\n",
-    "            ask4()\n",
+    "            return ask4()\n",
     "    elif q4.lower() == \"m2cm\":\n",
     "        ef_leq200 = 14.9\n",
     "        ef_200to400 = 18.9\n",
     "        ef_geq400 = 21.6\n",
     "        return (ef_leq200, ef_200to400, ef_geq400)\n",
+    "    else:\n",
+    "        print(\"Not a valid input.\")\n",
+    "        return ask4()\n",
     "    \n",
     "def ask5():\n",
     "    flood_rate = 0.0\n",
     "    q5 = input(\"\"\"What abandoned mine flood rate would you like to use? \n",
-    "    (Enter as a percentage, or hit return for the default default value of 50.)\"\"\")\n",
+    "    (Enter as a percentage, or hit return for the default value of 50.)\"\"\")\n",
     "    if q5 == \"\":\n",
     "        flood_rate = .5\n",
     "        print(\"Default = 50%.\")\n",
     "        return flood_rate\n",
     "    else:\n",
     "        try:\n",
-    "            if float(q5) >= 0:\n",
-    "                if float(q5) <= 100:\n",
-    "                    flood_rate = float(q5)/100\n",
-    "                    return flood_rate\n",
+    "            if float(q5) >= 0 and float(q5) <= 100:\n",
+    "                flood_rate = float(q5)/100\n",
+    "                return flood_rate\n",
     "            else:\n",
     "                print(\"Not a valid input.\")\n",
-    "                ask5()\n",
+    "                return ask5()\n",
     "        except ValueError:\n",
     "            print(\"Not a valid input.\")\n",
-    "            ask5()\n",
+    "            return ask5()\n",
     "            \n",
     "def cmm_to_amm():\n",
     "    try:\n",
@@ -300,7 +299,7 @@
     "        return (new_amm, py, fr)\n",
     "    except TypeError:\n",
     "        print(\"Whoops! Something went wrong. Let's start over.\")\n",
-    "        cmm_to_amm()\n",
+    "        return cmm_to_amm()\n",
     "        \n",
     "## Run calculator. Output is a MtCO2e vs year graph.\n",
     "\n",
@@ -379,13 +378,6 @@
     "    print(\"AMM emissions from mines abandoned in the next %s years: \" % str(closing_years))\n",
     "print(df)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
