Updated next steps

--- a/amm_prediction_calculator.ipynb
+++ b/amm_prediction_calculator.ipynb
@@ -54,6 +54,8 @@
     "\n",
     "— DataFrame with annual emissions in mmcf and MtCO2e, as well as cumulative MtCO2e\n",
     "\n",
+    "— Fixed recursion bug\n",
+    "\n",
     "### Next steps\n",
     "\n",
     "— Quantify/include uncertainty\n",
