Tweaked intro text

--- a/amm_decline_simulator.ipynb
+++ b/amm_decline_simulator.ipynb
@@ -16,6 +16,8 @@
     "\n",
     "### Possible improvements\n",
     "\n",
+    "— Comparison with constant percentage drop.\n",
+    "\n",
     "— Sealed, flooded, & partially flooded functionality.\n",
     "\n",
     "— Quantify/include uncertainty.\n",
